<resources>
    <string name="app_name">RZD assistant</string>
    <string name="dialog_title_start_chet">Начало пути</string>
    <string name="dialog_title_start_nechet">Начало пути</string>
    <string name="dialog_button_start_chet">Готово</string>
    <string name="dialog_button_start_nechet">Готово</string>
    <string name="tv_distance_chet">0</string>
    <string name="tv_distance_nechet">0</string>
    <string name="tv_velocity_chet">0</string>
    <string name="tv_velocity_nechet">0</string>
    <string name="tv_km_chet">км/ч</string>
    <string name="tv_km_nechet">км/ч</string>
    <string name="tv_start_chet">Введите КМ.</string>
    <string name="tv_start_nechet">Введите КМ.</string>
    <string name="button_actitivity_nechet">Следовать с нечётным</string>
    <string name="button_actitivity_chet">Следовать с чётным</string>
    <string name="ed_start_chet">Введите км. начало пути</string>
    <string name="ed_start_nechet">Введите км. начало пути</string>
    <string name="tvt_title_chet">Километр</string>
    <string name="tvt_speed_chet">Скорость</string>
    <string name="tvt_title_nechet">Километр</string>
    <string name="tvt_speed_nechet">Скорость</string>
    <string name="text_empty">Вы не ввели значение</string>
    <string name="saved">Сохранено</string>
    <string name="edit_title_chet">Начало ограничения</string>
    <string name="edit_title_finish_chet">Конец ограничения</string>
    <string name="edit_speed_chet">км/ч</string>
    <string name="edit_title_nechet">Начало ограничения</string>
    <string name="edit_title_finish_nechet">Конец ограничение</string>
    <string name="edit_speed_nechet">км/ч</string>

    <string name="dialog_title_usl_chet">Условная длина</string>
    <string name="ed_usl_chet">Введите усл. дл.</string>
    <string name="dialog_button_usl_chet">Готово</string>
    <string name="hint_usl_chet">Ввести</string>
    <string name="text_usl_chet">Усл. дл.</string>

    <string name="dialog_title_usl_nechet">Условная длина</string>
    <string name="ed_usl_nechet">Введите усл. дл.</string>
    <string name="dialog_button_usl_nechet">Готово</string>
    <string name="hint_usl_nechet">Ввести</string>
    <string name="text_usl_nechet">Усл. дл.</string>

    <string name="app_in_name">RZD_assistant</string>
    <string name="app_in_name_email">Вы вошли как</string>
    <string name="text_bottom">Перед использованием приложения, необходимо включить геолокацию</string>

    <string name="btnSignIn">Войти</string>
    <string name="error_sign_in_window">Ошибка авторизации</string>
    <string name="error_sign_in_window_pass">Введите пароль более 5-ти символов</string>
    <string name="error_sign_in_window_email">Введите email</string>

    <string name="btnRegister">Регистрация</string>
    <string name="error_Register_email">Введите вашу почту</string>
    <string name="error_Register_name">Введите ваше имя</string>
    <string name="error_Register_phone">Введите телефон без знака + не менее 11-ти цифр</string>
    <string name="error_Register_pass">Введите пароль более 5-ти символов</string>
    <string name="success_Register">Пользователь добавлен</string>
    <string name="error_Register">Ошибка регистрации или пользователь уже зарегистрирован</string>

    <string name="forgot_password">Забыли пароль?</string>
    <string name="enter_your_email_address">Введите ваш email address</string>
    <string name="btnReset">Reset</string>


    <string name="btnSave">S</string>
    <string name="btnGet">G</string>




    <string name="app_name_services">Сервис</string>
    <string name="hello_world">Hello_world</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start Service</string>
    <string name="stop">Stop Service</string>


</resources>