<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    android:id="@+id/root_element"
    tools:context=".MainActivityLogirovanie">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/suez_one"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/suez_one"
            android:text="@string/app_in_name_email"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bStartChet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:onClick="onClickStart"
            android:text="Чётный"
            android:textSize="10sp"
            tools:ignore="HardcodedText,OnClick,UsingOnClickInXml" />

        <Button
            android:id="@+id/bStartNechet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:onClick="onClickBtnNechet"
            android:text="Нечётный"
            android:textSize="10sp"
            tools:ignore="HardcodedText,OnClick,UsingOnClickInXml" />

        <Button
            android:id="@+id/bLogaut"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:onClick="onClickSignOut"
            android:text="Выход"
            android:textSize="7sp"
            tools:ignore="OnClick,UsingOnClickInXml" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/text_bottom"
        android:textAlignment="center"
        android:textColor="@color/text_bottom"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_bottom"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnSignIn"
            android:textColor="@color/white"
            android:visibility="visible"
            app:backgroundTint="@color/btn_sign_in" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_register"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnRegister"
            android:textColor="@color/white"
            android:visibility="visible"
            app:backgroundTint="@color/btn_register" />


    </LinearLayout>

</RelativeLayout>