<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonActitivityNechet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickBtnNechet"
        android:text="@string/button_actitivity_nechet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/tvDistanceChet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_distance_chet"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <ProgressBar
        android:id="@+id/progressBarChet"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="474dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <TextView
        android:id="@+id/tvVelocityChet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_velocity_chet"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/tvKmChet"
        android:layout_width="38dp"
        android:layout_height="28dp"
        android:text="@string/tv_km_chet"
        app:layout_constraintBottom_toBottomOf="@+id/tvVelocityChet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toEndOf="@+id/tvVelocityChet"
        app:layout_constraintTop_toTopOf="@+id/tvVelocityChet"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvStartChet"
        android:layout_width="233dp"
        android:layout_height="28dp"
        android:minHeight="48dp"
        android:onClick="onClickDistanceStartChet"
        android:text="@string/tv_start_chet"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255"
        tools:ignore="UsingOnClickInXml" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcViewChet"
        android:layout_width="168dp"
        android:layout_height="278dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonChet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClickAddChet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="ContentDescription,KeyboardInaccessibleWidget,UsingOnClickInXml" />

    <TextView
        android:id="@+id/tvNameChet"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:padding="5dp"
        android:textColor="#029308"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/tvSpeedChet"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:padding="4dp"
        android:textColor="#F81A0A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/tvInfoChet"
        android:layout_width="420dp"
        android:layout_height="55dp"
        android:padding="5dp"
        android:textColor="#0940CC"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/tvRowChet"
        android:layout_width="35dp"
        android:layout_height="55dp"
        android:padding="5dp"
        android:textColor="#AF6B07"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/tv_proba_chet"
        android:layout_width="227dp"
        android:layout_height="43dp"
        android:padding="5dp"
        android:textColor="#F41C1C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/button2"
        android:layout_width="62dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:onClick="onclick_minus_chet"
        android:text="-50"
        app:layout_constraintBottom_toBottomOf="@+id/tvDistanceChet"
        app:layout_constraintEnd_toStartOf="@+id/tvDistanceChet"
        app:layout_constraintTop_toTopOf="@+id/tvDistanceChet"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="62dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:onClick="onclick_plus_chet"
        android:text="+50"
        app:layout_constraintBottom_toBottomOf="@+id/tvDistanceChet"
        app:layout_constraintStart_toEndOf="@+id/tvDistanceChet"
        app:layout_constraintTop_toTopOf="@+id/tvDistanceChet"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvUslChet"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:hint="@string/hint_usl_chet"
        android:onClick="onClickUslChet"
        android:paddingLeft="8dp"
        android:paddingTop="2dp"
        android:textColor="#453F3F"
        android:textColorHint="#453F3F"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

    <TextView
        android:id="@+id/tvTextUslChet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_usl_chet"
        android:padding="2dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/faktKm"
        android:layout_width="205dp"
        android:layout_height="44dp"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

</androidx.constraintlayout.widget.ConstraintLayout>