<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityNechet"
    tools:ignore="UsingOnClickInXml">

    <TextView
        android:id="@+id/tvSpeedNechet"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:padding="4dp"
        android:textColor="#F81A0A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/tvNameNechet"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:padding="5dp"
        android:textColor="#029308"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <ProgressBar
        android:id="@+id/progressBarNechet"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="474dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <TextView
        android:id="@+id/tvStartNechet"
        android:layout_width="245dp"
        android:layout_height="28dp"
        android:onClick="onClickDistanceStartNechet"
        android:text="@string/tv_start_nechet"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <TextView
        android:id="@+id/tvDistanceNechet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_distance_nechet"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/tvVelocityNechet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_velocity_nechet"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="34dp"
        android:layout_height="26dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tv_km_nechet"
        app:layout_constraintBottom_toBottomOf="@+id/tvVelocityNechet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toEndOf="@+id/tvVelocityNechet"
        app:layout_constraintTop_toTopOf="@+id/tvVelocityNechet"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcViewNechet"
        android:layout_width="163dp"
        android:layout_height="280dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonNechet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClickAddNechet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="ContentDescription,KeyboardInaccessibleWidget" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickBtnChet"
        android:text="@string/button_actitivity_chet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <TextView
        android:id="@+id/tvRowNechet"
        android:layout_width="35dp"
        android:layout_height="55dp"
        android:padding="5dp"
        android:textColor="#AF6B07"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/tvInfoNechet"
        android:layout_width="420dp"
        android:layout_height="55dp"
        android:padding="5dp"
        android:textColor="#0940CC"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/tv_proba_nechet"
        android:layout_width="227dp"
        android:layout_height="43dp"
        android:padding="5dp"
        android:textColor="#F41C1C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/button4"
        android:layout_width="62dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:onClick="onclick_minus_nechet"
        android:text="-50"
        app:layout_constraintBottom_toBottomOf="@+id/tvDistanceNechet"
        app:layout_constraintEnd_toStartOf="@+id/tvDistanceNechet"
        app:layout_constraintTop_toTopOf="@+id/tvDistanceNechet"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="62dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:onClick="onclick_plus_nechet"
        android:text="+50"
        app:layout_constraintBottom_toBottomOf="@+id/tvDistanceNechet"
        app:layout_constraintStart_toEndOf="@+id/tvDistanceNechet"
        app:layout_constraintTop_toTopOf="@+id/tvDistanceNechet"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvUslNechet"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:hint="@string/hint_usl_nechet"
        android:onClick="onClickUslNechet"
        android:paddingLeft="8dp"
        android:paddingTop="2dp"
        android:textColor="#453F3F"
        android:textColorHint="#453F3F"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <TextView
        android:id="@+id/tvTextUslNechet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_usl_nechet"
        android:padding="2dp"
        android:textColor="#040404"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/faktKmNechet"
        android:layout_width="205dp"
        android:layout_height="44dp"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

</androidx.constraintlayout.widget.ConstraintLayout>